--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v2
-      run: |
-        echo $GITHUB_RUN_ID
-        echo $GITHUB_ACTION
-        echo $GITHUB_EVENT_PATH
-        echo $GITHUB_SHA
-        echo $GITHUB_REF
-        echo $GITHUB_API_URL
+      - uses: actions/checkout@v2
+      - run: |
+         echo $GITHUB_RUN_ID
+         echo $GITHUB_ACTION
+         echo $GITHUB_EVENT_PATH
+         echo $GITHUB_SHA
+         echo $GITHUB_REF
+         echo $GITHUB_API_URL
+      - shell: bash
       
