--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: |
-         echo $GITHUB_RUN_ID
-         echo $GITHUB_ACTION
-         echo $GITHUB_EVENT_PATH
-         echo $GITHUB_SHA
-         echo $GITHUB_REF
-         echo $GITHUB_API_URL
-      - shell: bash
-      
+      - run: echo $GITHUB_RUN_ID
+      - run: echo $GITHUB_ACTION
+      - run: echo $GITHUB_EVENT_PATH
+      - run: echo $GITHUB_SHA
+      - run: echo $GITHUB_REF
+      - run: echo $GITHUB_API_URL
