Update test.yml and add test.py

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
       - run: echo $GITHUB_RUN_ID
       - run: echo $GITHUB_ACTION
       - run: echo $GITHUB_EVENT_PATH
       - run: echo $GITHUB_SHA
       - run: echo $GITHUB_REF
       - run: echo $GITHUB_API_URL
+      - run: python test.py
