--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
       - run: echo $GITHUB_RUN_ID
       - run: echo $GITHUB_ACTION
       - run: echo $GITHUB_EVENT_PATH
+      - run: cat ${GITHUB_EVENT_PATH}
       - run: echo $GITHUB_SHA
       - run: echo $GITHUB_REF
       - run: echo $GITHUB_API_URL
