--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,6 @@ jobs:
       - run: cat ${GITHUB_EVENT_PATH}
       - run: echo $GITHUB_SHA
       - run: echo $GITHUB_REF
+      - env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: python test.py
