--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: master
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -15,6 +18,4 @@ jobs:
       - run: cat ${GITHUB_EVENT_PATH}
       - run: echo $GITHUB_SHA
       - run: echo $GITHUB_REF
-      - env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: python test.py
