--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -6,8 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: |
-        echo $GITHUB_SHA
-        echo $GITHUB_REF
-        echo $GITHUB_EVENT_PATH
+      - run: echo $GITHUB_SHA
+      - run: echo $GITHUB_REF
+      - run: echo $GITHUB_EVENT_PATH
 
