--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -4,7 +4,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: |
-        echo $GITHUB_SHA
-        echo $GITHUB_REF
-        echo $GITHUB_EVENT_PATH
+      - run: echo $GITHUB_SHA
+      - run: echo $GITHUB_REF
+      - run: echo $GITHUB_EVENT_PATH
