--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,10 @@ jobs:
       - run: echo $GITHUB_RUN_ID
       - run: echo $GITHUB_EVENT_PATH
       - run: echo $GITHUB_REF
+      - run: echo $GITHUB_ENV
+      - run: cat $GITHUB_ENV
+      - run: echo $GITHUB_PATH
+      - run: cat $GITHUB_PATH
       - run: python check_run.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
