--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,6 @@ jobs:
       - uses: actions/setup-python@v2
       - run: echo $GITHUB_ENV
       - run: echo "FROM=WORKFLOW" >> $GITHUB_ENV
-      - run: cat $GITHUB_ENV
       - run: echo $PATH
-      - run: python check_run.py
-      - run: cat $GITHUB_ENV
+      - run: python check.py
       - run: echo $PATH
